option('fixed-point', type : 'boolean', value : false, description : 'Compile without floating point (for machines without a fast enough FPU')
option('fixed-point-debug', type : 'boolean', value : false, description : 'Debug fixed-point implementation')
option('float-api', type : 'boolean', value : true, description : 'Compile with or without the floating point API (for machines with no float library')
option('custom-modes', type : 'boolean', value : false, description : 'Enable non-Opus modes, e.g. 44.1 kHz & 2^n frames')
option('float-approx', type : 'boolean', value : false, description : 'Enable fast approximations for floating point (not supported on all platforms)')
option('disable-asm', type : 'boolean', value : false, description : 'Disable assembly optimizations')
option('disable-rtcd', type : 'boolean', value : false, description : 'Disable run-time CPU capabilities detection')
option('enable-intrinsics', type : 'boolean', value : false, description : 'Enable intrinsics optimizations for ARM(float) X86(fixed)')
option('disable-extra-programs', type : 'boolean', value : false, description : 'Do not build extra programs (demo and tests)')
option('assertions', type : 'boolean', value : false, description : 'Enable additional software error checking')
option('fuzzing', type : 'boolean', value : false, description : 'Causes the encoder to make random decisions')
option('disable-tests', type : 'boolean', value : false, description : 'Do not build tests')

# feature options
option('docs', type: 'feature', value: 'auto', description: 'Build API documentation')

# other options
option('docdir', type: 'string', value: 'doc/opus', description: 'Directory to install documentation into (default: DATADIR/doc/opus')
